Updates from Overleaf

--- a/appendices.tex
+++ b/appendices.tex
@@ -3,7 +3,7 @@
 \chapter{Pointless extras}
 \label{app:Pointless}
 
-\chapter{Some more stuff}
+\chapter{Single Parameter Variations}\label{app:single_parameter_variations}
 
 \def\proposalxsec{
 genie_ccresAxial_Genie,genie_ncresAxial_Genie,genie_qema_Genie,genie_NC_Genie,genie_NonResRvpCC1pi_Genie,genie_NonResRvnCC1pi_Genie,genie_NonResRvbarnCC1pi_Genie,genie_NonResRvbarpCC1pi_Genie,genie_NonResRvpCC2pi_Genie,genie_NonResRvnCC2pi_Genie,genie_NonResRvbarnCC2pi_Genie,genie_NonResRvbarpCC2pi_Genie,genie_NonResRvpNC1pi_Genie,genie_NonResRvnNC1pi_Genie,genie_NonResRvbarnNC1pi_Genie,genie_NonResRvbarpNC1pi_Genie,genie_NonResRvpNC2pi_Genie,genie_NonResRvnNC2pi_Genie,genie_NonResRvbarnNC2pi_Genie,genie_NonResRvbarpNC2pi_Genie}
@@ -21,7 +21,7 @@ genie_ccresAxial_Genie,genie_ncresAxial_Genie,genie_qema_Genie,genie_NC_Genie,ge
     \includegraphics[width =\textwidth]{figures-chap6/tweak_nsigma_nue/\x_nuelikeCChigh_3sigma_\x.png}
 \end{subfigure}
 }
-\caption{A comparison of the +3\sigma variations from the response functions used by VALOR and the universes for the complete set of uncorrelated flux systematic parameters.}
+\caption[Flux systematic parameter validation.]{A comparison of the +3$\sigma$ variations from the response functions used by VALOR and the universes for the complete set of uncorrelated flux systematic parameters.}
 \end{figure}
 
 \begin{figure}
@@ -31,7 +31,7 @@ genie_ccresAxial_Genie,genie_ncresAxial_Genie,genie_qema_Genie,genie_NC_Genie,ge
     \includegraphics[width =\textwidth]{figures-chap6/tweak_nsigma_nue/\x_nuelikeCChigh_3sigma_\x.png}
 \end{subfigure}
 }
-\caption{A comparison of the +3\sigma variations from the response functions used by VALOR and the universes for the complete set of proposal cross-section systematic parameters.}
+\caption[Proposal interaction systematic parameter validation.]{A comparison of the +3$\sigma$ variations from the response functions used by VALOR and the universes for the complete set of proposal interaction systematic parameters.}
 \end{figure}
 
 \begin{figure}
@@ -41,7 +41,7 @@ genie_ccresAxial_Genie,genie_ncresAxial_Genie,genie_qema_Genie,genie_NC_Genie,ge
     \includegraphics[width =\textwidth]{figures-chap6/tweak_nsigma_nue/\x_nuelikeCChigh_3sigma_\x.png}
 \end{subfigure}
 }
-\caption{A comparison of the +3\sigma variations from the response functions used by VALOR and the universes for the complete set of modern cross-section systematic parameters.}
+\caption[Modern interaction systematic parameter validation.]{A comparison of the +3$\sigma$ variations from the response functions used by VALOR and the universes for the complete set of modern cross-section systematic parameters.}
 \end{figure}
 %% Big appendixes should be split off into separate files, just like chapters
 %\input{app-myreallybigappendix}
