--- a/chap4-Energy_Reco.tex
+++ b/chap4-Energy_Reco.tex
@@ -35,7 +35,7 @@ The electric field in the \Glspl{tpc} are designed to be uniform between the \Gl
 \section{Overview of shower energy reconstruction in SBND}\label{subchap:shower reco overview}
 Reconstructing shower energies predominantly involves calculating the charge collected by the \Gls{tpc} wire planes and estimating an associated energy. Detector dependant effects such as electron lifetime and recombination need to be accounted for. Electron lifetime is a measure of the free electrons lost due to attachment to impurities in the liquid argon whilst drifting across the detector \cite{ArgoNeuT_electron_lifetime_paper}. When argon atoms are ionised, the resulting argon ion and ionised electron may immediately recombine. This is known as the recombination effect and the magnitude of the effect is largely due to the local electric field \cite{ArgoNeuT_recombination_paper}. 
 
-Correcting for the recombination effect directly is not straightforward because it is dependent on $\frac{dE}{dx}$ (see \EquationRef{eqn:ModBox} and unlike for track-like objects, reconstructing the 3D trajectory for showers is difficult \cite{MicroBooNE_photon_Ereco_paper}. Two different approaches have been considered and are discussed in the relevant energy reconstruction methods below; 1) Assume a nominal recombination value for all hits and 2) use a lookup curve which relates the collected charge to energy which circumvents the need to evaluate a recombination correction because it is already accounted for in the curve.
+Correcting for the recombination effect directly is not straightforward because it is dependent on $\frac{dE}{dx}$ (see \EquationRef{eqn:ModBox} and unlike for track-like objects, reconstructing the 3D trajectory for showers is difficult \cite{MicroBooNE_photon_Ereco_paper}). Two different approaches have been considered and are discussed in the relevant energy reconstruction methods below; 1) Assume a nominal recombination value for all hits and 2) use a lookup curve which relates the collected charge to energy which circumvents the need to evaluate a recombination correction directly because it already gets accounted for in the curve.
 
 \subsection{Linear Energy Tool}\label{subchap:Linear Energy Tool}
 The first shower energy reconstruction method developed as part of the \textit{PandoraShower} suite of tools was the \textit{Shower Linear Energy tool}. This tool relies on the linear relationship between the true energy deposited in the detector and the reconstructed charge. A sample of \Gls{mc} muons are used as calibration because the $\frac{dE}{dx}$ value for electrons and \Gls{mip} muons are not dissimilar. The relationship between the charge obtained from the hits due to the muons and the energy deposited by the muons is shown in \FigureRef{fig:linear lookup curve}. A linear relationship such as this is comparable to assuming a constant recombination factor. 
