--- a/glossary.tex
+++ b/glossary.tex
@@ -53,6 +53,8 @@
 \newacronym{tla}{TLA}{Three Letter Acronym}
 \newacronym{tpb}{TPB}{Tetraphenyl Butadiene}
 \newacronym{tpc}{TPC}{Time Projection Chamber}
+\newacronym{t2k}{T2K}{Tokai to Kamioka}
+\newacronym{valor}{VALOR}{VALencia-Oxford-Rutherford}
 \newacronym{vuv}{VUV}{Vacuum Ultra Violet}
 
 
