--- a/main.tex
+++ b/main.tex
@@ -56,9 +56,9 @@
 \begin{mainmatter}
   %% Actually, more semantic chapter filenames are better, like "chap-bgtheory.tex"
   %\input{chap1-introduction}
-  \input{chap2-motivation_for_steriles}
-  \input{chap3-SBN_Program}
-  \input{chap4-Energy_Reco}
+  %\input{chap2-motivation_for_steriles}
+  %\input{chap3-SBN_Program}
+  %\input{chap4-Energy_Reco}
   \input{chap5-oscillation_inputs}
   \input{chap6-valor_analysis}
   %\input{chap7-Conclusion}
