--- a/mythesis.bib
+++ b/mythesis.bib
@@ -29,7 +29,7 @@
 }
 
 @article{SBN_paper,
-   title={The Short-Baseline Neutrino Program at Fermilab},
+   title="{The Short-Baseline Neutrino Program at Fermilab}",
    volume={69},
    ISSN={1545-4134},
    url={http://dx.doi.org/10.1146/annurev-nucl-101917-020949},
@@ -56,7 +56,7 @@
 }
 @book{Fundamentals_of_Neutrino_Physics_and_Astrophysics,
     author = "Giunti, Carlo and Chung W. Kim",
-    title = "Fundamentals of Neutrino Physics and Astrophysics.",
+    title = "{Fundamentals of Neutrino Physics and Astrophysics.}",
     publisher = "Oxford: Oxford University Press",
     year = "2007",  
     doi = "10.1093/acprof:oso/9780198508717.001.0001"
@@ -69,6 +69,21 @@
     publisher = "John Wiley and Sons, Ltd, Publication"
 }
 
+@book{The_physics_of_neutrinos_book,
+  title="{The Physics of Neutrinos}",
+  author={Barger, V. and Marfatia, D. and Whisnant, K.},
+  isbn={9781400845590},
+  url={https://books.google.co.uk/books?id=879tdkeTXAcC},
+  year={2012},
+  publisher={Princeton University Press}
+}
+
+@book{Quarks_and_Leptons:_An_Introductor_Course_in_Modern_Particle_Physics_book,
+  title="{Quarks and Leptons: An Introductory Course in Modern Particle Physics}",
+  author={Halzen, F. and Martin, A.D.},
+  year={1984},
+  publisher={John Wiley, New York}
+}
 
 
 % chap2 - neutrino theory
@@ -139,7 +154,7 @@
 }
 
 @article{SuperK_neutrino_oscillations,
-   title={Evidence for Oscillation of Atmospheric Neutrinos},
+   title="{Evidence for Oscillation of Atmospheric Neutrinos}",
    volume={81},
    ISSN={1079-7114},
    url={http://dx.doi.org/10.1103/PhysRevLett.81.1562},
@@ -170,7 +185,7 @@
 }
 
 @article{tau_lepton_discovery,
-  title = {Evidence for Anomalous Lepton Production in ${e}^{+}\ensuremath{-}{e}^{\ensuremath{-}}$ Annihilation},
+  title = "{Evidence for Anomalous Lepton Production in ${e}^{+}\ensuremath{-}{e}^{\ensuremath{-}}$ Annihilation}",
   author = {Perl, M. L. and Abrams, G. S. and Boyarski, A. M. and Breidenbach, M. and Briggs, D. D. and Bulos, F. and Chinowsky, W. and Dakin, J. T. and Feldman, G. J. and Friedberg, C. E. and Fryberger, D. and Goldhaber, G. and Hanson, G. and Heile, F. B. and Jean-Marie, B. and Kadyk, J. A. and Larsen, R. R. and Litke, A. M. and L\"uke, D. and Lulu, B. A. and L\"uth, V. and Lyon, D. and Morehouse, C. C. and Paterson, J. M. and Pierre, F. M. and Pun, T. P. and Rapidis, P. A. and Richter, B. and Sadoulet, B. and Schwitters, R. F. and Tanenbaum, W. and Trilling, G. H. and Vannucci, F. and Whitaker, J. S. and Winkelmann, F. C. and Wiss, J. E.},
   journal = {Phys. Rev. Lett.},
   volume = {35},
@@ -193,7 +208,7 @@
 }
 
 @article{LSND_excess,
-  title = {Evidence for neutrino oscillations from the observation of ${\overline{\ensuremath{\nu}}}_{e}$ appearance in a ${\overline{\ensuremath{\nu}}}_{\ensuremath{\mu}}$ beam},
+  title = "{Evidence for neutrino oscillations from the observation of ${\overline{\ensuremath{\nu}}}_{e}$ appearance in a ${\overline{\ensuremath{\nu}}}_{\ensuremath{\mu}}$ beam}",
   author = {Aguilar, A. and Auerbach, L. B. and Burman, R. L. and Caldwell, D. O. and Church, E. D. and Cochran, A. K. and Donahue, J. B. and Fazely, A. and Garvey, G. T. and Gunasingha, R. M. and Imlay, R. and Louis, W. C. and Majkic, R. and Malik, A. and Metcalf, W. and Mills, G. B. and Sandberg, V. and Smith, D. and Stancu, I. and Sung, M. and Tayloe, R. and VanDalen, G. J. and Vernon, W. and Wadia, N. and White, D. H. and Yellin, S.},
   collaboration = {LSND Collaboration},
   journal = {Phys. Rev. D},
@@ -209,7 +224,7 @@
 }
 
 @article{MiniBooNE_excess,
-  title = {Significant Excess of Electronlike Events in the MiniBooNE Short-Baseline Neutrino Experiment},
+  title = "{Significant Excess of Electron like Events in the MiniBooNE Short-Baseline Neutrino Experiment}",
   author = {Aguilar-Arevalo, A. A. and Brown, B. C. and Bugel, L. and Cheng, G. and Conrad, J. M. and Cooper, R. L. and Dharmapalan, R. and Diaz, A. and Djurcic, Z. and Finley, D. A. and Ford, R. and Garcia, F. G. and Garvey, G. T. and Grange, J. and Huang, E.-C. and Huelsnitz, W. and Ignarra, C. and Johnson, R. A. and Karagiorgi, G. and Katori, T. and Kobilarcik, T. and Louis, W. C. and Mariani, C. and Marsh, W. and Mills, G. B. and Mirabal, J. and Monroe, J. and Moore, C. D. and Mousseau, J. and Nienaber, P. and Nowak, J. and Osmanov, B. and Pavlovic, Z. and Perevalov, D. and Ray, H. and Roe, B. P. and Russell, A. D. and Shaevitz, M. H. and Spitz, J. and Stancu, I. and Tayloe, R. and Thornton, R. T. and Tzanov, M. and Van de Water, R. G. and White, D. H. and Wickremasinghe, D. A. and Zimmerman, E. D.},
   collaboration = {MiniBooNE Collaboration},
   journal = {Phys. Rev. Lett.},
@@ -266,6 +281,20 @@ abstract = {After the completion of the gallium solar neutrino experiments at th
   url = {https://link.aps.org/doi/10.1103/PhysRevC.73.045805}
 }
 
+@article{gallium_anomaly,
+title = "{The gallium anomaly revisited}",
+journal = {Physics Letters B},
+volume = {795},
+pages = {542-547},
+year = {2019},
+issn = {0370-2693},
+doi = {https://doi.org/10.1016/j.physletb.2019.06.057},
+url = {https://www.sciencedirect.com/science/article/pii/S037026931930440X},
+author = {J. Kostensalo and J. Suhonen and C. Giunti and P.C. Srivastava},
+keywords = {Gallium anomaly, Charged-current cross-sections, Nuclear shell model, Neutrino-nucleus interactions},
+abstract = {The gallium anomaly, i.e. the missing electron-neutrino flux from 37Ar and 51Cr electron-capture decays as measured by the GALLEX and SAGE solar-neutrino detectors, has been among us already for about two decades. We present here a new estimate of the significance of this anomaly based on cross-section calculations using nuclear shell-model wave functions obtained by exploiting recently developed two-nucleon interactions. The gallium anomaly of the GALLEX and SAGE experiments is found to be smaller than that obtained in previous evaluations, decreasing the significance from 3.0σ to 2.3σ. This result is compatible with the recent indication in favor of short-baseline ν¯e disappearance due to small active-sterile neutrino mixing obtained from the combined analysis of the data of the NEOS and DANSS reactor experiments.}
+}
+
 @article{Reactor_anomaly,
    title={Reactor antineutrino anomaly},
    volume={83},
@@ -283,7 +312,7 @@ abstract = {After the completion of the gallium solar neutrino experiments at th
 @incollection{Majorana2020,
 author="Majorana, Ettore",
 editor="Cifarelli, Luisa",
-title="A Symmetric Theory of Electrons and Positrons",
+title="{A Symmetric Theory of Electrons and Positrons}",
 bookTitle="Scientific Papers of Ettore Majorana: A New Expanded Edition",
 year="2020",
 publisher="Springer International Publishing",
@@ -296,7 +325,7 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
 }
 
 @article{Double_beta_decay,
-  title = {On Transition Probabilities in Double Beta-Disintegration},
+  title = "{On Transition Probabilities in Double Beta-Disintegration}",
   author = {Furry, W. H.},
   journal = {Phys. Rev.},
   volume = {56},
@@ -359,7 +388,7 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
 }
 
 @article{MINOS,
-  title = {Search for Sterile Neutrinos Mixing with Muon Neutrinos in MINOS},
+  title = "{Search for Sterile Neutrinos Mixing with Muon Neutrinos in MINOS}",
   author = {Adamson, P. and Anghel, I. and Aurisano, A. and Barr, G. and Bishai, M. and Blake, A. and Bock, G. J. and Bogert, D. and Cao, S. V. and Carroll, T. J. and Castromonte, C. M. and Chen, R. and Childress, S. and Coelho, J. A. B. and Corwin, L. and Cronin-Hennessy, D. and de Jong, J. K. and De Rijck, S. and Devan, A. V. and Devenish, N. E. and Diwan, M. V. and Escobar, C. O. and Evans, J. J. and Falk, E. and Feldman, G. J. and Flanagan, W. and Frohne, M. V. and Gabrielyan, M. and Gallagher, H. R. and Germani, S. and Gomes, R. A. and Goodman, M. C. and Gouffon, P. and Graf, N. and Gran, R. and Grzelak, K. and Habig, A. and Hahn, S. R. and Hartnell, J. and Hatcher, R. and Holin, A. and Huang, J. and Hylen, J. and Irwin, G. M. and Isvan, Z. and James, C. and Jensen, D. and Kafka, T. and Kasahara, S. M. S. and Koizumi, G. and Kordosky, M. and Kreymer, A. and Lang, K. and Ling, J. and Litchfield, P. J. and Lucas, P. and Mann, W. A. and Marshak, M. L. and Mayer, N. and McGivern, C. and Medeiros, M. M. and Mehdiyev, R. and Meier, J. R. and Messier, M. D. and Miller, W. H. and Mishra, S. R. and Moed Sher, S. and Moore, C. D. and Mualem, L. and Musser, J. and Naples, D. and Nelson, J. K. and Newman, H. B. and Nichol, R. J. and Nowak, J. A. and O'Connor, J. and Orchanian, M. and Pahlka, R. B. and Paley, J. and Patterson, R. B. and Pawloski, G. and Perch, A. and Pf\"utzner, M. M. and Phan, D. D. and Phan-Budd, S. and Plunkett, R. K. and Poonthottathil, N. and Qiu, X. and Radovic, A. and Rebel, B. and Rosenfeld, C. and Rubin, H. A. and Sail, P. and Sanchez, M. C. and Schneps, J. and Schreckenberger, A. and Schreiner, P. and Sharma, R. and Sousa, A. and Tagg, N. and Talaga, R. L. and Thomas, J. and Thomson, M. A. and Tian, X. and Timmons, A. and Todd, J. and Tognini, S. C. and Toner, R. and Torretta, D. and Tzanakos, G. and Urheim, J. and Vahle, P. and Viren, B. and Weber, A. and Webb, R. C. and White, C. and Whitehead, L. and Whitehead, L. H. and Wojcicki, S. G. and Zwaska, R.},
   collaboration = {MINOS Collaboration},
   journal = {Phys. Rev. Lett.},
@@ -375,7 +404,7 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
 }
 
 @article{Goldhaber_experiment,
-  title = {Helicity of Neutrinos},
+  title = "{Helicity of Neutrinos}",
   author = {Goldhaber, M. and Grodzins, L. and Sunyar, A. W.},
   journal = {Phys. Rev.},
   volume = {109},
@@ -404,7 +433,7 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
 }
 
 @article{Cronin_and_Fitch_experiment,
-  title = {Evidence for the $2\ensuremath{\pi}$ Decay of the $K_{2}^{0}$ Meson},
+  title = "{Evidence for the $2\ensuremath{\pi}$ Decay of the $K_{2}^{0}$ Meson}",
   author = {Christenson, J. H. and Cronin, J. W. and Fitch, V. L. and Turlay, R.},
   journal = {Phys. Rev. Lett.},
   volume = {13},
@@ -441,7 +470,7 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
 	number = {5},
 	pages = {392--393},
 	author = {Andrei D Sakharov},
-	title = {Violation {ofCPin} variance,Casymmetry, and baryon asymmetry of the universe},
+	title = "{Violation of \textit{CP} invariance, \textit{C} asymmetry, and baryon asymmetry of the universe}",
 	journal = {Soviet Physics Uspekhi},
 	abstract = {}
 }
@@ -477,10 +506,23 @@ url="https://doi.org/10.1007/978-3-030-23509-3_11"
   
 	author = {A. Diaz and C.A. Argüelles and G.H. Collin and J.M. Conrad and M.H. Shaevitz},
   
-	title = {Where are we with light sterile neutrinos?},
+	title = "{Where are we with light sterile neutrinos?}",
   
 	journal = {Physics Reports}
 }
+
+@misc{mass_hierarchy_image,
+  doi = {10.48550/ARXIV.1307.5487},
+  url = {https://arxiv.org/abs/1307.5487},
+  author = {Cahn, R. N. and Dwyer, D. A. and Freedman, S. J. and Haxton, W. C. and Kadel, R. W. and Kolomensky, Yu. G. and Luk, K. B. and McDonald, P. and Gann, G. D. Orebi and Poon, A. W. P.},
+  keywords = {High Energy Physics - Experiment (hep-ex), High Energy Physics - Phenomenology (hep-ph), Nuclear Experiment (nucl-ex), FOS: Physical sciences, FOS: Physical sciences},
+  title = "{White Paper: Measuring the Neutrino Mass Hierarchy}",
+  publisher = {arXiv},
+  year = {2013},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
 
 %%%%%%%%%%%%%%%%%
 % SBN Programme %
@@ -490,14 +532,14 @@ author = {Acciarri, R. and Adams, C. and An, R. and Aparicio, A. and Aponte, S. 
 year = {2016},
 month = {12},
 pages = {},
-title = {Design and Construction of the MicroBooNE Detector},
+title = "{Design and Construction of the MicroBooNE Detector}",
 volume = {12},
 journal = {Journal of Instrumentation},
 doi = {10.1088/1748-0221/12/02/P02017}
 }
 
 @article{BNB_flux,
-  title = {Neutrino flux prediction at MiniBooNE},
+  title = "{Neutrino flux prediction at MiniBooNE}",
   author = {Aguilar-Arevalo, A. A. and Anderson, C. E. and Bazarko, A. O. and Brice, S. J. and Brown, B. C. and Bugel, L. and Cao, J. and Coney, L. and Conrad, J. M. and Cox, D. C. and Curioni, A. and Djurcic, Z. and Finley, D. A. and Fleming, B. T. and Ford, R. and Garcia, F. G. and Garvey, G. T. and Green, C. and Green, J. A. and Hart, T. L. and Hawker, E. and Imlay, R. and Johnson, R. A. and Karagiorgi, G. and Kasper, P. and Katori, T. and Kobilarcik, T. and Kourbanis, I. and Koutsoliotas, S. and Laird, E. M. and Linden, S. K. and Link, J. M. and Liu, Y. and Liu, Y. and Louis, W. C. and Mahn, K. B. M. and Marsh, W. and Martin, P. S. and McGregor, G. and Metcalf, W. and Meyers, P. D. and Mills, F. and Mills, G. B. and Monroe, J. and Moore, C. D. and Nelson, R. H. and Nguyen, V. T. and Nienaber, P. and Nowak, J. A. and Ouedraogo, S. and Patterson, R. B. and Perevalov, D. and Polly, C. C. and Prebys, E. and Raaf, J. L. and Ray, H. and Roe, B. P. and Russell, A. D. and Sandberg, V. and Schirato, R. and Schmitz, D. and Shaevitz, M. H. and Shoemaker, F. C. and Smith, D. and Soderberg, M. and Sorel, M. and Spentzouris, P. and Stancu, I. and Stefanski, R. J. and Sung, M. and Tanaka, H. A. and Tayloe, R. and Tzanov, M. and Van de Water, R. and Wascko, M. O. and White, D. H. and Wilking, M. J. and Yang, H. J. and Zeller, G. P. and Zimmerman, E. D.},
   collaboration = {MiniBooNE Collaboration},
   journal = {Phys. Rev. D},
@@ -513,8 +555,9 @@ doi = {10.1088/1748-0221/12/02/P02017}
 }
 
 @article{BNB_flux_TN,
-title = {Booster Neutrino Flux Prediction at MicroBooNE},
-author = {None, None},
+title = "{Booster Neutrino Flux Prediction at MicroBooNE}",
+author = {},
+collaboration = {MicroBooNE Collaboration},
 abstractNote = {The primary source of neutrinos for the MicroBooNE experiment is Fermilab’s Booster Neutrino Beamline. The beamline uses 8 GeV protons from the Booster accelerator steered onto a beryllium target. The secondaries are focused by a magnetic horn down a 50m long decay pipe. Decays of these secondaries give rise to a neutrino beam. We use the beamline simulation and techniques previously developed by the MiniBooNE collaboration to calculate the neutrino flux and estimate systematic uncertainties at the MicroBooNE detector location.},
 doi = {10.2172/1573216},
 url = {https://www.osti.gov/biblio/1573216}, 
@@ -525,7 +568,7 @@ month = {7}
 } 
 
 @misc{GENIE_manual,
-      title={The GENIE Neutrino Monte Carlo Generator: Physics and User Manual}, 
+      title="{The GENIE Neutrino Monte Carlo Generator: Physics and User Manual}", 
       author={Costas Andreopoulos and Christopher Barry and Steve Dytman and Hugh Gallagher and Tomasz Golan and Robert Hatcher and Gabriel Perdue and Julia Yarba},
       year={2015},
       eprint={1510.05494},
@@ -543,7 +586,7 @@ month = {7}
 
 @book{LArTPC_book,
     author = "Schenk, M.",
-    title = "Studies with a Liquid Argon Time Projection Chamber: Addressing Technological Challenges of Large-Scale Detectors",
+    title = "{Studies with a Liquid Argon Time Projection Chamber: Addressing Technological Challenges of Large-Scale Detectors}",
     Publisher = "Springer Specktrum",
     Year = "2015",
     Edition = "1",
@@ -552,7 +595,7 @@ month = {7}
 
 @article{Jaffe_model,
 author = {Jaffé, George},
-title = {Zur Theorie der Ionisation in Kolonnen},
+title = "{Zur Theorie der Ionisation in Kolonnen}",
 journal = {Annalen der Physik},
 volume = {347},
 number = {12},
@@ -564,7 +607,7 @@ year = {1913}
 }
 
 @article{Recombination_box_model,
-  title = {Recombination of electron-ion pairs in liquid argon and liquid xenon},
+  title = "{Recombination of electron-ion pairs in liquid argon and liquid xenon}",
   author = {Thomas, J. and Imel, D. A.},
   journal = {Phys. Rev. A},
   volume = {36},
@@ -579,7 +622,7 @@ year = {1913}
 }
 
 @article{diffusion,
-   title={Measurement of longitudinal electron diffusion in liquid argon},
+   title="{Measurement of longitudinal electron diffusion in liquid argon}",
    volume={816},
    ISSN={0168-9002},
    url={http://dx.doi.org/10.1016/j.nima.2016.01.094},
@@ -597,14 +640,14 @@ author = {Majumdar, Krishanu and Mavrokoridis, Konstantinos},
 year = {2021},
 month = {03},
 pages = {2455},
-title = {Review of Liquid Argon Detector Technologies in the Neutrino Sector},
+title = "{Review of Liquid Argon Detector Technologies in the Neutrino Sector}",
 volume = {11},
 journal = {Applied Sciences},
 doi = {10.3390/app11062455}
 }
 
 @misc{sbnd_crt,
-      title={A Novel Cosmic Ray Tagger System for Liquid Argon TPC Neutrino Detectors}, 
+      title="{A Novel Cosmic Ray Tagger System for Liquid Argon TPC Neutrino Detectors}", 
       author={M. Auger and M. Del Tutto and A. Ereditato and B. Fleming and D. Goeldi and E. Gramellini and R. Guenette and W. Ketchum and I. Kreslo and A. Laube and D. Lorca and M. Luethi and C. Rudolf von Rohr and J. R. Sinclair and S. R. Soleti and M. Weber},
       year={2016},
       eprint={1612.04614},
@@ -622,13 +665,13 @@ doi = {10.3390/app11062455}
 	number = {02},
 	pages = {C02004--C02004},
 	author = {A.A. Machado and E. Segreto},
-	title = {{ARAPUCA} a new device for liquid argon scintillation light detection},
+	title = "{{ARAPUCA} a new device for liquid argon scintillation light detection}",
 	journal = {Journal of Instrumentation},
 	abstract = {We present a totally innovative device for the detection of liquid argon scintillation light, that has been named ARAPUCA (Argon R&D Advanced Program at UniCAmp). It is composed of a passive light collector and of active devices. The latters are standard SiPMs that operate at liquid argon temperature, while the passive collector is based on a new technology, never explored in this field before. It is a photon trap, that allows to collect light with extremely high efficiency. The total detection efficiency of the device can be tuned by modifying the ratio between the area of the active devices (SiPM) and the area of the optical window. For example, it will allow to reach a detection efficiency at the level of 1\% on a surface of 50 × 50 cm2 with an active coverage of 2 × 2 cm2 (two/three large area SiPM). It is also a cheap device, since the major part of its cost is represented by the active devices. For these reason this appears to be the ideal device for scintillation light detection in large Time Projection Chambers. With appropriate modifications it can be used also in next generation Dark Matter detectors.}
 }
 
 @article{X-ARAPUCA,
-   title={The X-ARAPUCA: an improvement of the ARAPUCA device},
+   title="{The X-ARAPUCA: an improvement of the ARAPUCA device}",
    volume={13},
    ISSN={1748-0221},
    url={http://dx.doi.org/10.1088/1748-0221/13/04/C04026},
@@ -643,7 +686,7 @@ doi = {10.3390/app11062455}
 
 
 @article{microboone_detector,
-   title={Design and construction of the MicroBooNE detector},
+   title="{Design and construction of the MicroBooNE detector}",
    volume={12},
    ISSN={1748-0221},
    url={http://dx.doi.org/10.1088/1748-0221/12/02/P02017},
@@ -658,7 +701,7 @@ doi = {10.3390/app11062455}
 }
 
 @article{microboone_crt,
-   title={Design and construction of the MicroBooNE Cosmic Ray Tagger system},
+   title="{Design and construction of the MicroBooNE Cosmic Ray Tagger system}",
    volume={14},
    ISSN={1748-0221},
    url={http://dx.doi.org/10.1088/1748-0221/14/04/P04004},
@@ -690,7 +733,7 @@ doi = {10.3390/app11062455}
 }
 
 @article{light_dark_matter,
-  title = {Probing sub-GeV dark sectors via high energy proton beams at LBNF/DUNE and MiniBooNE},
+  title = "{Probing sub-GeV dark sectors via high energy proton beams at LBNF/DUNE and MiniBooNE}",
   author = {Frugiuele, Claudia},
   journal = {Phys. Rev. D},
   volume = {96},
@@ -705,7 +748,7 @@ doi = {10.3390/app11062455}
 }
 
 @article{dark_neutrino,
-  title = {Dark Neutrino Portal to Explain MiniBooNE Excess},
+  title = "{Dark Neutrino Portal to Explain MiniBooNE Excess}",
   author = {Bertuzzo, Enrico and Jana, Sudip and Machado, Pedro A. N. and Zukanovich Funchal, Renata},
   journal = {Phys. Rev. Lett.},
   volume = {121},
@@ -720,7 +763,7 @@ doi = {10.3390/app11062455}
 }
 
 @article{MeV_scale_sterile_neutrino,
-   title={MeV-scale sterile neutrino decays at the Fermilab Short-Baseline Neutrino program},
+   title="{MeV-scale sterile neutrino decays at the Fermilab Short-Baseline Neutrino program}",
    volume={2017},
    ISSN={1029-8479},
    url={http://dx.doi.org/10.1007/JHEP04(2017)102},
@@ -797,4 +840,101 @@ doi = {10.3390/app11062455}
    year={2020},
    month={Feb},
    pages={P02007–P02007}
+}
+
+@article{LSND_KARMEN_nue_app_contour,
+	doi = {10.1007/jhep08(2018)010},
+  
+	url = {https://doi.org/10.1007%2Fjhep08%282018%29010},
+  
+	year = 2018,
+	month = {aug},
+  
+	publisher = {Springer Science and Business Media {LLC}
+},
+  
+	volume = {2018},
+  
+	number = {8},
+  
+	author = {Mona Dentler and {\'{A}}lvaro Hern{\'{a}}ndez-Cabezudo and Joachim Kopp and Pedro Machado and Michele Maltoni and Ivan Martinez-Soler and Thomas Schwetz},
+  
+	title = "{Updated global analysis of neutrino oscillations in the presence of {eV}-scale sterile neutrinos}",
+  
+	journal = {Journal of High Energy Physics}
+}
+
+@article{T2K_nue_disapp_contour,
+	doi = {10.1103/physrevd.91.051102},
+  
+	url = {https://doi.org/10.1103%2Fphysrevd.91.051102},
+  
+	year = 2015,
+	month = {mar},
+  
+	publisher = {American Physical Society ({APS})},
+  
+	volume = {91},
+  
+	number = {5},
+  
+	author = {K. Abe and J. Adam and H. Aihara and T. Akiri and C. Andreopoulos and S. Aoki and A. Ariga and S. Assylbekov and D. Autiero and M. Barbi and G.{\hspace{0.167em}}J. Barker and G. Barr and P. Bartet-Friburg and M. Bass and M. Batkiewicz and F. Bay and V. Berardi and B.{\hspace{0.167em}}E. Berger and S. Berkman and S. Bhadra and F.{\hspace{0.167em}}d.{\hspace{0.167em}}M. Blaszczyk and A. Blondel and C. Bojechko and S. Bolognesi and S. Bordoni and S.{\hspace{0.167em}}B. Boyd and D. Brailsford and A. Bravar and C. Bronner and N. Buchanan and R.{\hspace{0.167em}}G. Calland and J. Caravaca Rodr{\'{\i}}guez and S.{\hspace{0.167em}}L. Cartwright and R. Castillo and M.{\hspace{0.167em}}G. Catanesi and A. Cervera and D. Cherdack and G. Christodoulou and A. Clifton and J. Coleman and S.{\hspace{0.167em}}J. Coleman and G. Collazuol and K. Connolly and L. Cremonesi and A. Dabrowska and R. Das and S. Davis and P. de Perio and G. De Rosa and T. Dealtry and S.{\hspace{0.167em}}R. Dennis and C. Densham and D. Dewhurst and F. Di Lodovico and S. Di Luise and S. Dolan and O. Drapier and T. Duboyski and K. Duffy and J. Dumarchez and S. Dytman and M. Dziewiecki and S. Emery-Schrenk and A. Ereditato and L. Escudero and T. Feusels and A.{\hspace{0.167em}}J. Finch and G.{\hspace{0.167em}}A. Fiorentini and M. Friend and Y. Fujii and Y. Fukuda and A.{\hspace{0.167em}}P. Furmanski and V. Galymov and A. Garcia and S. Giffin and C. Giganti and K. Gilje and D. Goeldi and T. Golan and M. Gonin and N. Grant and D. Gudin and D.{\hspace{0.167em}}R. Hadley and L. Haegel and A. Haesler and M.{\hspace{0.167em}}D. Haigh and P. Hamilton and D. Hansen and T. Hara and M. Hartz and T. Hasegawa and N.{\hspace{0.167em}}C. Hastings and T. Hayashino and Y. Hayato and C. Hearty and R.{\hspace{0.167em}}L. Helmer and M. Hierholzer and J. Hignight and A. Hillairet and A. Himmel and T. Hiraki and S. Hirota and J. Holeczek and S. Horikawa and K. Huang and A.{\hspace{0.167em}}K. Ichikawa and K. Ieki and M. Ieva and M. Ikeda and J. Imber and J. Insler and T.{\hspace{0.167em}}J. Irvine and T. Ishida and T. Ishii and E. Iwai and K. Iwamoto and K. Iyogi and A. Izmaylov and A. Jacob and B. Jamieson and M. Jiang and S. Johnson and J.{\hspace{0.167em}}H. Jo and P. Jonsson and C.{\hspace{0.167em}}K. Jung and M. Kabirnezhad and A.{\hspace{0.167em}}C. Kaboth and T. Kajita and H. Kakuno and J. Kameda and Y. Kanazawa and D. Karlen and I. Karpikov and T. Katori and E. Kearns and M. Khabibullin and A. Khotjantsev and D. Kielczewska and T. Kikawa and A. Kilinski and J. Kim and S. King and J. Kisiel and P. Kitching and T. Kobayashi and L. Koch and T. Koga and A. Kolaceke and A. Konaka and L.{\hspace{0.167em}}L. Kormos and A. Korzenev and Y. Koshio and W. Kropp and H. Kubo and Y. Kudenko and R. Kurjata and T. Kutter and J. Lagoda and I. Lamont and E. Larkin and M. Laveder and M. Lawe and M. Lazos and T. Lindner and C. Lister and R.{\hspace{0.167em}}P. Litchfield and A. Longhin and J.{\hspace{0.167em}}P. Lopez and L. Ludovici and L. Magaletti and K. Mahn and M. Malek and S. Manly and A.{\hspace{0.167em}}D. Marino and J. Marteau and J.{\hspace{0.167em}}F. Martin and P. Martins and S. Martynenko and T. Maruyama and V. Matveev and K. Mavrokoridis and E. Mazzucato and M. McCarthy and N. McCauley and K.{\hspace{0.167em}}S. McFarland and C. McGrew and A. Mefodiev and C. Metelko and M. Mezzetto and P. Mijakowski and C.{\hspace{0.167em}}A. Miller and A. Minamino and O. Mineev and A. Missert and M. Miura and S. Moriyama and Th.{\hspace{0.167em}}A. Mueller and A. Murakami and M. Murdoch and S. Murphy and J. Myslik and T. Nakadaira and M. Nakahata and K.{\hspace{0.167em}}G. Nakamura and K. Nakamura and S. Nakayama and T. Nakaya and K. Nakayoshi and C. Nantais and C. Nielsen and M. Nirkko and K. Nishikawa and Y. Nishimura and J. Nowak and H.{\hspace{0.167em}}M. O'Keeffe and R. Ohta and K. Okumura and T. Okusawa and W. Oryszczak and S.{\hspace{0.167em}}M. Oser and T. Ovsyannikova and R.{\hspace{0.167em}}A. Owen and Y. Oyama and V. Palladino and J.{\hspace{0.167em}}L. Palomino and V. Paolone and D. Payne and O. Perevozchikov and J.{\hspace{0.167em}}D. Perkin and Y. Petrov and L. Pickard and E.{\hspace{0.167em}}S. Pinzon Guerra and C. Pistillo and P. Plonski and E. Poplawska and B. Popov and M. Posiadala-Zezula and J.-M. Poutissou and R. Poutissou and P. Przewlocki and B. Quilain and E. Radicioni and P.{\hspace{0.167em}}N. Ratoff and M. Ravonel and M.{\hspace{0.167em}}A.{\hspace{0.167em}}M. Rayner and A. Redij and M. Reeves and E. Reinherz-Aronis and C. Riccio and P.{\hspace{0.167em}}A. Rodrigues and P. Rojas and E. Rondio and S. Roth and A. Rubbia and D. Ruterbories and A. Rychter and R. Sacco and K. Sakashita and F. S{\'{a}}nchez and F. Sato and E. Scantamburlo and K. Scholberg and S. Schoppmann and J. Schwehr and M. Scott and Y. Seiya and T. Sekiguchi and H. Sekiya and D. Sgalaberna and R. Shah and F. Shaker and D. Shaw and M. Shiozawa and S. Short and Y. Shustrov and P. Sinclair and B. Smith and M. Smy and J.{\hspace{0.167em}}T. Sobczyk and H. Sobel and M. Sorel and L. Southwell and P. Stamoulis and J. Steinmann and B. Still and Y. Suda and A. Suzuki and K. Suzuki and S.{\hspace{0.167em}}Y. Suzuki and Y. Suzuki and R. Tacik and M. Tada and S. Takahashi and A. Takeda and Y. Takeuchi and H.{\hspace{0.167em}}K. Tanaka and H.{\hspace{0.167em}}A. Tanaka and M.{\hspace{0.167em}}M. Tanaka and D. Terhorst and R. Terri and L.{\hspace{0.167em}}F. Thompson and A. Thorley and S. Tobayama and W. Toki and T. Tomura and C. Touramanis and T. Tsukamoto and M. Tzanov and Y. Uchida and A. Vacheret and M. Vagins and G. Vasseur and T. Wachala and K. Wakamatsu and M. Wallbank and C.{\hspace{0.167em}}W. Walter and D. Wark and W. Warzycha and M.{\hspace{0.167em}}O. Wascko and A. Weber and R. Wendell and R.{\hspace{0.167em}}J. Wilkes and M.{\hspace{0.167em}}J. Wilking and C. Wilkinson and Z. Williamson and J.{\hspace{0.167em}}R. Wilson and R.{\hspace{0.167em}}J. Wilson and T. Wongjirad and Y. Yamada and K. Yamamoto and C. Yanagisawa and T. Yano and S. Yen and N. Yershov and M. Yokoyama and K. Yoshida and T. Yuan and M. Yu and A. Zalewska and J. Zalipska and L. Zambelli and K. Zaremba and M. Ziembicki and E.{\hspace{0.167em}}D. Zimmerman and M. Zito and J. {\.{Z}}muda and},
+  
+	title = "{Search for short baseline \nue disappearance with the T2K near detector}",
+  
+	journal = {Physical Review D}
+}
+
+@misc{VALOR,
+   title="{The VALOR Group}",
+   howpublished = "{\href{https://valor.pp.rl.ac.uk}{https://valor.pp.rl.ac.uk}}",
+   author={Andreopoulos, C and others}
+}
+
+@misc{VALOR_dune,
+title = "{VALOR DUNE Joint Oscillation and Systematics Constraint Fit
+(Version 2016a v2)}",
+author = {C. Andreopoulos and others},
+year = "2016",
+howpublished = {\href{https://docs.dunescience.org/cgi-bin/private/ShowDocument?docid=1291}{DUNE DocID 1291}}
+}
+
+@article{GENIE,
+          author = "Andreopoulos, C. and others",
+          title = "{The GENIE Neutrino Monte Carlo Generator}",
+          eprint = "0905.2517",
+          archivePrefix = "arXiv",
+          primaryClass = "hep-ph",
+          reportNumber = "FERMILAB-PUB-09-418-CD",
+          doi = "10.1016/j.nima.2009.12.009",
+          journal = "Nucl. Instrum. Meth. A",
+          volume = "614",
+          pages = "87--104",
+          year = "2010"
+}
+        
+@phdthesis{Dom's_thesis,
+    month = {July},
+    title = "{Developments Towards a {\ensuremath{\nu}}e CC Sterile Appearance Sensitivity in the Short-Baseline Neutrino Programme}",
+    school = {University of Sheffield},
+    author = {Dominic Barker},
+    year = {2020},
+    keywords = {Liquid Argon, Neutrino, Sterile Neutrino, SBN, SBND, Oscillation},
+    url = {https://etheses.whiterose.ac.uk/29009/},
+    howpublished = {\href{https://etheses.whiterose.ac.uk/29009/}{uk.bl.ethos.832514}},
+    abstract = {The Short Baseline Neutrino (SBN) programme is an upcoming neutrino experiment situated on the Booster Neutrino Beam (BNB) at the Fermilab National Laboratory. One of the primary objectives of the SBN programme is to confirm or refute the low energy electron neutrino excess observed in previous neutrino experiments: LSND and MiniBooNE. It was postulated that this observed low energy electron neutrino excess was caused by the existence of one or more sterile neutrinos. If this is confirmed, it will alter our current understanding of physics as well as the standard model and the prescription of neutrino oscillations.
+    
+    To achieve this primary objective, the SBN programme will perform studies which are sensitive to electron neutrino appearances. These are carried out assuming several sterile models, in particular the 3+1 model. To undertake the physics goals of the SBN programme, three Liquid Argon Time Projection Chambers (LArTPCs) are positioned at various points along the BNB beamline. These LArTPCs are known as The Short Baseline Near Detector (SBND) (110 m), Micro Booster Neutrino Experiment (MicroBooNE) (470 m), and the Imaging Cosmic And Rare Underground Signals (ICARUS) (600 m) detector. LArTPCs provide sophisticated calorimetric and topological information to identify the energy and flavour of charged particles in neutrino interactions. For an electron neutrino excess search, it is important to reconstruct and identify the resultant electron from neutrino Charge Current (CC) events. A new framework with new methods was developed to characterise electromagnetic showers to help identify electrons from background photon showers. The new methods were then employed in an oscillated electron neutrino selection upon simulated events in the SBN detectors. The resultant event distributions were then used to perform an electron neutrino appearance sensitivity analysis using the 3 + 1 sterile model in the VALencia-Oxford-Rutherford (VALOR) neutrino oscillation fitting framework. 
+    
+    The single-phase wire near detector of the SBN programme, SBND, is also viewed as a prototype for the upcoming Deep Underground Neutrino Experiment (DUNE) far detector. Due to the high rate of events at the location of the DUNE near detector, single-phase wire LArTPCs are not feasible. Therefore, alternative readout methods are being considered, such as a pixelated readout. To test these alternative readout methods, a research rig at the University of Sheffield has been developed.}
+}
+
+@phdthesis{Rhiannon's_thesis,
+    title = "{Muon-neutrino disappearance with multiple liquid argon time projection chambers in the Fermilab Booster neutrino beam}",
+    school = {University of Liverpool},
+    author = {Rhiannon Jones},
+    year = {2021},
+    keywords = {Liquid Argon, Neutrino, Sterile Neutrino, SBN, SBND, Oscillation},
+    url = {https://livrepository.liverpool.ac.uk/id/eprint/3143192},
+    doi = {10.17638/03143192}
 }
